[package]
name = "rusty_weed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
concat-string = "1.0.1"
reqwest = { version = "0.11.15", features = ["json", "gzip", "multipart"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_qs = "0.12.0"
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.94"
